--- a/dashboard.html
+++ b/dashboard.html
@@ -12,18 +12,12 @@
       box-sizing: border-box;
       font-family: 'Inter', sans-serif;
     }body {
-  background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364, #1e3c72);
-  background-size: 400% 400%;
-  animation: gradientBG 10s ease infinite;
+  background: url('https://cdn.pixabay.com/photo/2017/08/30/07/52/technology-2696222_1280.jpg') no-repeat center center fixed;
+  background-size: cover;
   color: white;
+  padding: 0;
   min-height: 100vh;
   display: flex;
-}
-
-@keyframes gradientBG {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
 }
 
 .sidebar {
@@ -56,10 +50,6 @@
   transition: 0.3s;
 }
 
-.sidebar a i {
-  font-size: 1.2rem;
-}
-
 .sidebar a:hover, .sidebar a.active {
   background: #ffd700;
   color: #000;
@@ -84,10 +74,23 @@
   font-size: 26px;
 }
 
+.welcome-box {
+  background: rgba(255, 255, 255, 0.07);
+  border-left: 5px solid #ffd700;
+  padding: 15px 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.welcome-box p {
+  color: #eee;
+  font-size: 16px;
+}
+
 .quick-nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 1.2rem;
+  gap: 1.5rem;
   margin-bottom: 30px;
 }
 
@@ -99,14 +102,15 @@
   text-decoration: none;
   background: rgba(255,255,255,0.1);
   border-radius: 1rem;
-  padding: 1.2rem;
+  padding: 1rem;
   color: white;
   font-weight: 600;
   transition: 0.3s;
+  text-align: center;
 }
 
 .quick-nav a i {
-  font-size: 1.5rem;
+  font-size: 20px;
   margin-bottom: 8px;
 }
 
@@ -152,6 +156,9 @@
     margin-left: 0;
     padding: 1rem;
   }
+  .quick-nav a i {
+    font-size: 16px;
+  }
 }
 
   </style>
@@ -171,7 +178,11 @@
   </div>  <div class="main">
     <div class="header">
       <h1>Welcome to the Finance Point Dashboard</h1>
-    </div><div class="quick-nav">
+    </div><div class="welcome-box">
+  <p>👋 Hello and welcome! Stay informed, connected, and involved with everything happening in your department.</p>
+</div>
+
+<div class="quick-nav">
   <a href="downloads.html"><i class="fas fa-file-download"></i>Downloads</a>
   <a href="events.html"><i class="fas fa-calendar"></i>Events</a>
   <a href="news.html"><i class="fas fa-bullhorn"></i>News</a>
