--- a/dashboard.html
+++ b/dashboard.html
@@ -1,169 +1,197 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Finance Point</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-overlay: rgba(0,0,0,0.6);
+      --text-color: #fff;
+      --highlight: #ffd700;
+      --card-bg: rgba(255,255,255,0.1);
+    }
+    body.light-mode {
+      --bg-overlay: rgba(255,255,255,0.8);
+      --text-color: #121212;
+      --highlight: #e0a600;
+      --card-bg: rgba(0,0,0,0.05);
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: 'Inter', sans-serif;
-    }body {
-  background: url('https://cdn.pixabay.com/photo/2017/08/30/07/52/technology-2696222_1280.jpg') no-repeat center center fixed;
-  background-size: cover;
-  color: white;
-  padding: 0;
-  min-height: 100vh;
-  display: flex;
-}
+    }
 
-.sidebar {
-  width: 220px;
-  background: rgba(0, 0, 0, 0.85);
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding: 20px 10px;
-  overflow-y: auto;
-}
+    body {
+      min-height: 100vh;
+      color: var(--text-color);
+      display: flex;
+      background: url('https://images.unsplash.com/photo-1565514156637-15ec02d12174?auto=format&fit=crop&w=1400&q=80')
+        no-repeat center/cover fixed;
+      backdrop-filter: blur(4px);
+      transition: background 0.3s, color 0.3s;
+    }
 
-.sidebar h2 {
-  color: #ffd700;
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 30px;
-}
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: var(--bg-overlay);
+      z-index: 0;
+    }
 
-.sidebar a {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: #ccc;
-  text-decoration: none;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border-radius: 5px;
-  transition: 0.3s;
-}
+    .toggle-mode {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 10;
+      background: var(--highlight);
+      color: #000;
+      padding: 8px 14px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
+    }
 
-.sidebar a:hover, .sidebar a.active {
-  background: #ffd700;
-  color: #000;
-  font-weight: bold;
-}
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 220px;
+      background: var(--bg-overlay);
+      padding: 20px 10px;
+      z-index: 5;
+      overflow-y: auto;
+    }
 
-.main {
-  margin-left: 220px;
-  padding: 2rem;
-  flex: 1;
-}
+    .sidebar h2 {
+      color: var(--highlight);
+      font-size: 22px;
+      text-align: center;
+      margin-bottom: 30px;
+    }
 
-.header {
-  background: rgba(0, 0, 0, 0.6);
-  padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: #ccc;
+      text-decoration: none;
+      padding: 12px 20px;
+      margin: 8px 0;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
 
-.header h1 {
-  color: #ffd700;
-  font-size: 26px;
-}
+    .sidebar a:hover, .sidebar a.active {
+      background: var(--highlight);
+      color: #000;
+      font-weight: bold;
+    }
 
-.welcome-box {
-  background: rgba(255, 255, 255, 0.07);
-  border-left: 5px solid #ffd700;
-  padding: 15px 20px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
+    .main {
+      margin-left: 220px;
+      padding: 2rem;
+      flex: 1;
+      z-index: 5;
+    }
 
-.welcome-box p {
-  color: #eee;
-  font-size: 16px;
-}
+    .header {
+      background: var(--card-bg);
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
 
-.quick-nav {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 1.5rem;
-  margin-bottom: 30px;
-}
+    .header h1 {
+      font-size: 24px;
+      color: var(--highlight);
+    }
 
-.quick-nav a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  background: rgba(255,255,255,0.1);
-  border-radius: 1rem;
-  padding: 1rem;
-  color: white;
-  font-weight: 600;
-  transition: 0.3s;
-  text-align: center;
-}
+    .quick-nav {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 1rem;
+      margin-bottom: 30px;
+    }
 
-.quick-nav a i {
-  font-size: 20px;
-  margin-bottom: 8px;
-}
+    .quick-nav a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      background: var(--card-bg);
+      border-radius: 1rem;
+      padding: 1.5rem;
+      color: var(--text-color);
+      font-weight: 600;
+      text-align: center;
+      transition: 0.3s;
+    }
 
-.quick-nav a:hover {
-  background: #ffd700;
-  color: #000;
-}
+    .quick-nav a:hover {
+      background: var(--highlight);
+      color: #000;
+    }
 
-.facts, .notifications {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 1.5rem;
-}
+    .facts, .notifications {
+      background: var(--card-bg);
+      padding: 20px;
+      border-radius: 10px;
+      margin-bottom: 1.5rem;
+    }
 
-.facts h2, .notifications h2 {
-  color: #ffd700;
-  margin-bottom: 10px;
-}
+    .facts h2, .notifications h2 {
+      color: var(--highlight);
+      margin-bottom: 10px;
+    }
 
-.notification-popup {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #ffd700;
-  color: #000;
-  padding: 1rem 1.5rem;
-  border-radius: 1rem;
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  animation: slideIn 1s ease-out;
-}
+    .notification-popup {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: var(--highlight);
+      color: #000;
+      padding: 1rem 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      animation: slideIn 1s ease-out;
+      z-index: 10;
+    }
 
-@keyframes slideIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-@media (max-width: 768px) {
-  .sidebar {
-    display: none;
-  }
-  .main {
-    margin-left: 0;
-    padding: 1rem;
-  }
-  .quick-nav a i {
-    font-size: 16px;
-  }
-}
+    @media (max-width: 768px) {
+      .sidebar {
+        display: none;
+      }
 
+      .main {
+        margin-left: 0;
+        padding: 1rem;
+      }
+
+      .toggle-mode {
+        top: 12px;
+        right: 12px;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="overlay"></div>
+
+  <div class="toggle-mode" onclick="toggleMode()">Toggle Mode</div>
+
   <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
@@ -175,43 +203,50 @@
     <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
     <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  </div>  <div class="main">
-    <div class="header">
-      <h1>Welcome to the Finance Point Dashboard</h1>
-    </div><div class="welcome-box">
-  <p>👋 Hello and welcome! Stay informed, connected, and involved with everything happening in your department.</p>
-</div>
-
-<div class="quick-nav">
-  <a href="downloads.html"><i class="fas fa-file-download"></i>Downloads</a>
-  <a href="events.html"><i class="fas fa-calendar"></i>Events</a>
-  <a href="news.html"><i class="fas fa-bullhorn"></i>News</a>
-  <a href="executives.html"><i class="fas fa-users"></i>Executives</a>
-  <a href="lostandfound.html"><i class="fas fa-search"></i>Lost & Found</a>
-  <a href="birthday.html"><i class="fas fa-birthday-cake"></i>Birthday Wall</a>
-  <a href="study.html"><i class="fas fa-book"></i>Study Resources</a>
-</div>
-
-<div class="facts">
-  <h2>💡 Finance Facts</h2>
-  <ul>
-    <li>The first paper money was created in China 1,400 years ago.</li>
-    <li>Credit cards were introduced in 1950 by Diners Club.</li>
-    <li>Compound interest can double your investment faster than simple interest.</li>
-  </ul>
-</div>
-
-<div class="notifications">
-  <h2>📣 Academic Tips</h2>
-  <ul>
-    <li>Review lecture notes the same day to retain more.</li>
-    <li>Practice past questions to improve exam confidence.</li>
-    <li>Study in short bursts with breaks — it works better!</li>
-  </ul>
-</div>
-
-  </div>  <div class="notification-popup">
-    ✅ You're viewing the latest student updates.
   </div>
+
+  <div class="main">
+    <div class="header">
+      <h1>👋 Welcome to the Finance Point Dashboard</h1>
+    </div>
+
+    <div class="quick-nav">
+      <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
+      <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
+      <a href="news.html"><i class="fas fa-bullhorn fa-2x"></i><br>News</a>
+      <a href="executives.html"><i class="fas fa-users fa-2x"></i><br>Executives</a>
+      <a href="lostandfound.html"><i class="fas fa-search fa-2x"></i><br>Lost & Found</a>
+      <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
+      <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
+    </div>
+
+    <div class="facts">
+      <h2>💡 Finance Facts</h2>
+      <ul>
+        <li>The first modern bank was Banca Monte dei Paschi di Siena, founded in 1472.</li>
+        <li>Compound interest grows faster than simple interest over time.</li>
+        <li>The global financial market is worth over $100 trillion.</li>
+      </ul>
+    </div>
+
+    <div class="notifications">
+      <h2>📚 Academic Tips</h2>
+      <ul>
+        <li>Read summaries before full chapters to get an overview.</li>
+        <li>Revise with a group to improve understanding.</li>
+        <li>Use flashcards for memory-based topics.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="notification-popup">
+    ✅ You are viewing the latest student updates.
+  </div>
+
+  <script>
+    function toggleMode() {
+      document.body.classList.toggle('light-mode');
+    }
+  </script>
 </body>
 </html>
