--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,181 +17,190 @@
       --text-color: #121212;
       --highlight: #e0a600;
       --card-bg: rgba(0,0,0,0.05);
-    }
+    }* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
-    }
+body {
+  min-height: 100vh;
+  color: var(--text-color);
+  display: flex;
+  background: #000;
+  backdrop-filter: blur(3px);
+  transition: background 0.3s, color 0.3s;
+}
 
-    body {
-      min-height: 100vh;
-      color: var(--text-color);
-      display: flex;
-      background: url('https://images.unsplash.com/photo-1565514156637-15ec02d12174?auto=format&fit=crop&w=1400&q=80')
-        no-repeat center/cover fixed;
-      backdrop-filter: blur(4px);
-      transition: background 0.3s, color 0.3s;
-    }
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #0f2027;
+  z-index: -1;
+}
 
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: var(--bg-overlay);
-      z-index: 0;
-    }
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: var(--bg-overlay);
+  z-index: 0;
+}
 
-    .toggle-mode {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 10;
-      background: var(--highlight);
-      color: #000;
-      padding: 8px 14px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+.toggle-mode {
+  position: fixed;
+  top: 12px;
+  right: 12px;
+  z-index: 10;
+  background: var(--highlight);
+  color: #000;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+}
 
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      width: 220px;
-      background: var(--bg-overlay);
-      padding: 20px 10px;
-      z-index: 5;
-      overflow-y: auto;
-    }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 220px;
+  background: var(--bg-overlay);
+  padding: 20px 10px;
+  z-index: 5;
+  overflow-y: auto;
+}
 
-    .sidebar h2 {
-      color: var(--highlight);
-      font-size: 22px;
-      text-align: center;
-      margin-bottom: 30px;
-    }
+.sidebar h2 {
+  color: var(--highlight);
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 30px;
+}
 
-    .sidebar a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      color: #ccc;
-      text-decoration: none;
-      padding: 12px 20px;
-      margin: 8px 0;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
+.sidebar a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #ccc;
+  text-decoration: none;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border-radius: 5px;
+  transition: 0.3s;
+}
 
-    .sidebar a:hover, .sidebar a.active {
-      background: var(--highlight);
-      color: #000;
-      font-weight: bold;
-    }
+.sidebar a:hover, .sidebar a.active {
+  background: var(--highlight);
+  color: #000;
+  font-weight: bold;
+}
 
-    .main {
-      margin-left: 220px;
-      padding: 2rem;
-      flex: 1;
-      z-index: 5;
-    }
+.main {
+  margin-left: 220px;
+  padding: 2rem;
+  flex: 1;
+  z-index: 5;
+  animation: fadeIn 1.5s ease-in-out;
+}
 
-    .header {
-      background: var(--card-bg);
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
+.header {
+  background: var(--card-bg);
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
 
-    .header h1 {
-      font-size: 24px;
-      color: var(--highlight);
-    }
+.header h1 {
+  font-size: 24px;
+  color: var(--highlight);
+}
 
-    .quick-nav {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 1rem;
-      margin-bottom: 30px;
-    }
+.quick-nav {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 1rem;
+  margin-bottom: 30px;
+}
 
-    .quick-nav a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      background: var(--card-bg);
-      border-radius: 1rem;
-      padding: 1.5rem;
-      color: var(--text-color);
-      font-weight: 600;
-      text-align: center;
-      transition: 0.3s;
-    }
+.quick-nav a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background: var(--card-bg);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  color: var(--text-color);
+  font-weight: 600;
+  text-align: center;
+  transition: 0.3s;
+}
 
-    .quick-nav a:hover {
-      background: var(--highlight);
-      color: #000;
-    }
+.quick-nav a:hover {
+  background: var(--highlight);
+  color: #000;
+}
 
-    .facts, .notifications {
-      background: var(--card-bg);
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 1.5rem;
-    }
+.facts, .notifications {
+  background: var(--card-bg);
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+}
 
-    .facts h2, .notifications h2 {
-      color: var(--highlight);
-      margin-bottom: 10px;
-    }
+.facts h2, .notifications h2 {
+  color: var(--highlight);
+  margin-bottom: 10px;
+}
 
-    .notification-popup {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: var(--highlight);
-      color: #000;
-      padding: 1rem 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-      animation: slideIn 1s ease-out;
-      z-index: 10;
-    }
+.notification-popup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--highlight);
+  color: #000;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  animation: slideIn 1s ease-out;
+  z-index: 10;
+}
 
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+@keyframes slideIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
-    @media (max-width: 768px) {
-      .sidebar {
-        display: none;
-      }
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
-      .main {
-        margin-left: 0;
-        padding: 1rem;
-      }
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+  .main {
+    margin-left: 0;
+    padding: 1rem;
+  }
+}
 
-      .toggle-mode {
-        top: 12px;
-        right: 12px;
-      }
-    }
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
   <div class="overlay"></div>
-
-  <div class="toggle-mode" onclick="toggleMode()">Toggle Mode</div>
-
-  <div class="sidebar">
+  <div class="toggle-mode" onclick="toggleMode()"><i class="fas fa-adjust"></i></div>  <div class="sidebar">
     <h2>Finance Point</h2>
     <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
     <a href="downloads.html"><i class="fas fa-file-download"></i> Downloads</a>
@@ -203,50 +211,44 @@
     <a href="birthday.html"><i class="fas fa-birthday-cake"></i> Birthday Wall</a>
     <a href="study.html"><i class="fas fa-book"></i> Study Resources</a>
     <a href="contact.html"><i class="fas fa-phone"></i> Contact</a>
-  </div>
-
-  <div class="main">
+  </div>  <div class="main">
     <div class="header">
-      <h1>👋 Welcome to the Finance Point Dashboard</h1>
-    </div>
+      <h1>👋 Welcome back to the Finance Point Dashboard!</h1>
+    </div><div class="quick-nav">
+  <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
+  <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
+  <a href="news.html"><i class="fas fa-bullhorn fa-2x"></i><br>News</a>
+  <a href="executives.html"><i class="fas fa-users fa-2x"></i><br>Executives</a>
+  <a href="lostandfound.html"><i class="fas fa-search fa-2x"></i><br>Lost & Found</a>
+  <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
+  <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
+</div>
 
-    <div class="quick-nav">
-      <a href="downloads.html"><i class="fas fa-file-download fa-2x"></i><br>Downloads</a>
-      <a href="events.html"><i class="fas fa-calendar fa-2x"></i><br>Events</a>
-      <a href="news.html"><i class="fas fa-bullhorn fa-2x"></i><br>News</a>
-      <a href="executives.html"><i class="fas fa-users fa-2x"></i><br>Executives</a>
-      <a href="lostandfound.html"><i class="fas fa-search fa-2x"></i><br>Lost & Found</a>
-      <a href="birthday.html"><i class="fas fa-birthday-cake fa-2x"></i><br>Birthday Wall</a>
-      <a href="study.html"><i class="fas fa-book fa-2x"></i><br>Study Resources</a>
-    </div>
+<div class="facts">
+  <h2>💡 Finance Facts</h2>
+  <ul>
+    <li>The Nigerian Naira was introduced in 1973, replacing the pound.</li>
+    <li>Microfinance banks support small-scale businesses in Nigeria.</li>
+    <li>Fintech is transforming how Nigerians access credit and savings.</li>
+  </ul>
+</div>
 
-    <div class="facts">
-      <h2>💡 Finance Facts</h2>
-      <ul>
-        <li>The first modern bank was Banca Monte dei Paschi di Siena, founded in 1472.</li>
-        <li>Compound interest grows faster than simple interest over time.</li>
-        <li>The global financial market is worth over $100 trillion.</li>
-      </ul>
-    </div>
+<div class="notifications">
+  <h2>📚 Academic Tips</h2>
+  <ul>
+    <li>Group study enhances retention and idea sharing.</li>
+    <li>Set weekly goals to stay ahead of lectures.</li>
+    <li>Make your notes colorful and summarized.</li>
+  </ul>
+</div>
 
-    <div class="notifications">
-      <h2>📚 Academic Tips</h2>
-      <ul>
-        <li>Read summaries before full chapters to get an overview.</li>
-        <li>Revise with a group to improve understanding.</li>
-        <li>Use flashcards for memory-based topics.</li>
-      </ul>
-    </div>
-  </div>
+  </div>  <div class="notification-popup">
+    ✅ You're viewing the latest updates on your Finance Point hub.
+  </div>  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>  <script>
+    particlesJS.load('particles-js', 'https://cdn.jsdelivr.net/gh/VincentGarreau/particles.js/demo/particles.json');
 
-  <div class="notification-popup">
-    ✅ You are viewing the latest student updates.
-  </div>
-
-  <script>
     function toggleMode() {
       document.body.classList.toggle('light-mode');
     }
-  </script>
-</body>
+  </script></body>
 </html>
